# CodeEvalChallengesCpp

./: CMakeLists.txt  FizzBuzz.cpp  README.md  bitposition.cpp  fibonacci.cpp  filesize.cpp  flavius.cpp  lowercase.cpp  multipleofnumbers.cpp  nmodm.cpp  oddnumbers.cpp  primepalindrome.cpp  primes.cpp  reversewords.cpp  rollercoster.cpp  seekforintruder.cpp  stringpermutations.cpp  sumofdigits.cpp  sumofintegerfromfile.cpp
