cmake_minimum_required(VERSION 3.2)
project(Challanges)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

add_executable(Primes primes.cpp)
add_executable(Rollercoster rollercoster.cpp)
add_executable(SumOfDigits sumofdigits.cpp)
add_executable(FizzBuzz FizzBuzz.cpp)
add_executable(PrimePal primepalindrome.cpp)
add_executable(ReverseWords reversewords.cpp)
add_executable(MultipleOfNumbers multipleofnumbers.cpp)
add_executable(Lowercase lowercase.cpp)
add_executable(Fibonacci fibonacci.cpp)
add_executable(SumOfIntegersFromFile sumofintegerfromfile.cpp)
add_executable(NModM nmodm.cpp)
add_executable(OddNumbers oddnumbers.cpp)
add_executable(BitPosition bitposition.cpp)
add_executable(StringPermut stringpermutations.cpp)
add_executable(FileSize filesize.cpp)
add_executable(Intruder seekforintruder.cpp)
add_executable(Flavius flavius.cpp)